css/style.css
#portfolioContainer {
  width: 90%;
  margin: 0 auto;
}

.name {
  position: absolute;
  z-index: 100;
  color: white;
  padding-left: 150px;
  text-shadow: 3px 3px 3px #90a4ae;
}

.title {
  position: absolute;
  z-index: 100;
  color: white;
  padding-left: 170px;
  padding-top: 80px;
  text-shadow: 3px 3px 3px #90a4ae;
}

.personal-title {
  font-style: italic;
  padding-top: 35px;
  font-size: 42px;
}

.personal {
  font-weight: 400;
  font-size: 16px;
}

.parallax-2 {
  height: 300px;
}

.contact-link {
  padding-left: 40px;
}

.email-link {
  color: white;
  font-style: italic;
}

#floating_hamburger {
  top: 45px; 
  right: 24px;
}

@media only screen and (max-width: 400px) {
	.name {
		padding-left: 40px;
  }
  .title {
    padding-left: 60px;
    padding-top: 145px;
  }
}
@media only screen and (min-width: 400px) and (max-width: 600px) {
	.name {
    padding-left: 80px;
    width: 200px;
  }
  .title {
    padding-left: 110px;
    padding-top: 145px;
  }
}

@media only screen and (min-width: 600px) and (max-width: 780px) {
	.name {
		padding-left: 100px;
  }
  .title {
    padding-left: 120px;
  }
}

